--- a/index.html
+++ b/index.html
@@ -118,6 +118,45 @@
 
         <p>&nbsp;</p>
         <p>&nbsp;</p>
+        <!-- Comparative simple table (added inline) -->
+        <div class="row" style="margin-top:18px;">
+            <div class="col-md-8 col-md-offset-2">
+                <h3 class="text-center">Comparativo</h3>
+                <div class="table-responsive">
+                    <table class="table table-bordered text-center" id="inlineComparativeTable">
+                        <thead>
+                            <tr>
+                                <th>Indicador</th>
+                                <th>Antes (ms)</th>
+                                <th>Depois (ms)</th>
+                                <th>Melhoria (%)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Duração total</td>
+                                <td id="cmp-duration-before">N/A</td>
+                                <td id="cmp-duration-after">N/A</td>
+                                <td id="cmp-duration-diff">N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Tempo CPU</td>
+                                <td id="cmp-cpu-before">N/A</td>
+                                <td id="cmp-cpu-after">N/A</td>
+                                <td id="cmp-cpu-diff">N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Leituras Lógicas</td>
+                                <td id="cmp-logical-before">N/A</td>
+                                <td id="cmp-logical-after">N/A</td>
+                                <td id="cmp-logical-diff">N/A</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
         <div id="resultTotal"></div>
         <div id="result"></div>
     </div>
