Ajuste Tabela Comparativo

--- a/src/index.html
+++ b/src/index.html
@@ -59,119 +59,120 @@
         </div>
     </div>
 
-    <!--<div class="container">
+    <div class="container">
         <div class="alert alert-warning" id="alertDiv">StatisticsIOParser.com is now StatisticsParser.com! New name,
             same great taste! <button type="button" class="close" data-dismiss="alert"
-                aria-hidden="true">&times;</button></div>-->
+                aria-hidden="true">&times;</button></div>
 
-    <h1>Statistics Parser</h1>
-    <div style="width:520px" id="introText">
-        Sometimes reading SQL Server output from Statistics IO and Statistics Time can be
-        a total drag. This page will help with that. Just paste in the output of Statistics
-        IO and/or Statistics Time and press Parse. Your output will be formatted and totaled. Enjoy.
-    </div>
-
-    <form>
-        <p>
-        </p>
-        <div>
-            <div class="checkbox"><label class="pull-right">
-                    <input type="checkbox" id="exampleCheck" value=""
-                        onclick="includeExample(exampleCheck.checked, langText)">
-                    Show Example Statistics IO Output
-                </label></div>
+        <h1>Statistics Parser</h1>
+        <div style="width:520px" id="introText">
+            Sometimes reading SQL Server output from Statistics IO and Statistics Time can be
+            a total drag. This page will help with that. Just paste in the output of Statistics
+            IO and/or Statistics Time and press Parse. Your output will be formatted and totaled. Enjoy.
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <label>Antes</label>
-                <textarea id="statiotext_before" rows="10" autofocus style="width:100%"></textarea>
+
+        <form>
+            <p>
+            </p>
+            <div>
+                <div class="checkbox"><label class="pull-right">
+                        <input type="checkbox" id="exampleCheck" value=""
+                            onclick="includeExample(exampleCheck.checked, langText)">
+                        Show Example Statistics IO Output
+                    </label></div>
             </div>
-            <div class="col-md-6">
-                <label>Depois</label>
-                <textarea id="statiotext_after" rows="10" style="width:100%"></textarea>
+            <div class="row">
+                <div class="col-md-6">
+                    <label>Antes</label>
+                    <textarea id="statiotext_before" rows="10" autofocus style="width:100%"></textarea>
+                </div>
+                <div class="col-md-6">
+                    <label>Depois</label>
+                    <textarea id="statiotext_after" rows="10" style="width:100%"></textarea>
+                </div>
+            </div>
+            <p></p>
+            <div class="button-padding">
+                <div style="float: left">
+                    <button id="parseButton" type="button" onclick="parseText(langText);"
+                        class="btn btn-primary">Parse</button>
+                </div>
+
+                <div class="btn-group button-inner-margin" style="float: right">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-cog"> </span>
+                        <span class="caret"> </span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li role="menu"><a href="#" onclick="toggleCheckmark(scrollbarOptionCheck, 'tableScrollbar');">
+                                <span id="scrollbarOptionCheck" style="display:none"
+                                    class="glyphicon glyphicon-ok"></span> Tables have scrollbars</a></li>
+                    </ul>
+                </div>
+                <div style="float: right">
+                    <button id="clearButton" type="button" onclick="clearResult();" class="btn btn-default">Clear
+                        Text</button>
+                </div>
+            </div>
+        </form>
+
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <!-- Comparative simple table (added inline) -->
+        <div class="row" style="margin-top:18px;">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="text-center" style="margin-bottom:8px">
+                    <input id="cmp-title-input" type="text" class="form-control"
+                        style="width:360px;display:inline-block;text-align:center"
+                        placeholder="Nome do comparativo (opcional)">
+                </div>
+                <h3 class="text-center" id="cmpHeader">Comparativo</h3>
+                <div class="table-responsive">
+                    <table class="table table-bordered text-center" id="inlineComparativeTable">
+                        <thead>
+                            <tr>
+                                <th>Indicador</th>
+                                <th>Antes (ms)</th>
+                                <th>Depois (ms)</th>
+                                <th>Melhoria (%)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Duração total</td>
+                                <td id="cmp-duration-before">N/A</td>
+                                <td id="cmp-duration-after">N/A</td>
+                                <td id="cmp-duration-diff">N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Tempo CPU</td>
+                                <td id="cmp-cpu-before">N/A</td>
+                                <td id="cmp-cpu-after">N/A</td>
+                                <td id="cmp-cpu-diff">N/A</td>
+                            </tr>
+                            <tr>
+                                <td>Leituras Lógicas</td>
+                                <td id="cmp-logical-before">N/A</td>
+                                <td id="cmp-logical-after">N/A</td>
+                                <td id="cmp-logical-diff">N/A</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-        <p></p>
-        <div class="button-padding">
-            <div style="float: left">
-                <button id="parseButton" type="button" onclick="parseText(langText);"
-                    class="btn btn-primary">Parse</button>
-            </div>
 
-            <div class="btn-group button-inner-margin" style="float: right">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-cog"> </span>
-                    <span class="caret"> </span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li role="menu"><a href="#" onclick="toggleCheckmark(scrollbarOptionCheck, 'tableScrollbar');">
-                            <span id="scrollbarOptionCheck" style="display:none" class="glyphicon glyphicon-ok"></span>
-                            Tables have scrollbars</a></li>
-                </ul>
-            </div>
-            <div style="float: right">
-                <button id="clearButton" type="button" onclick="clearResult();" class="btn btn-default">Clear
-                    Text</button>
-            </div>
-        </div>
-    </form>
-
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <!-- Comparative simple table (added inline) -->
-    <div class="row" style="margin-top:18px;">
-        <div class="col-md-8 col-md-offset-2">
-            <div class="text-center" style="margin-bottom:8px">
-                <input id="cmp-title-input" type="text" class="form-control"
-                    style="width:360px;display:inline-block;text-align:center"
-                    placeholder="Nome do comparativo (opcional)">
-            </div>
-            <h3 class="text-center" id="cmpHeader">Comparativo</h3>
-            <div class="table-responsive">
-                <table class="table table-bordered text-center" id="inlineComparativeTable">
-                    <thead>
-                        <tr>
-                            <th>Indicador</th>
-                            <th>Antes (ms)</th>
-                            <th>Depois (ms)</th>
-                            <th>Melhoria (%)</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Duração total</td>
-                            <td id="cmp-duration-before"></td>
-                            <td id="cmp-duration-after"></td>
-                            <td id="cmp-duration-diff"></td>
-                        </tr>
-                        <tr>
-                            <td>Tempo CPU</td>
-                            <td id="cmp-cpu-before"></td>
-                            <td id="cmp-cpu-after"></td>
-                            <td id="cmp-cpu-diff"></td>
-                        </tr>
-                        <tr>
-                            <td>Leituras Lógicas</td>
-                            <td id="cmp-logical-before"></td>
-                            <td id="cmp-logical-after"></td>
-                            <td id="cmp-logical-diff"></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
-    <div id="resultTotal"></div>
-    <div id="result"></div>
+        <div id="resultTotal"></div>
+        <div id="result"></div>
     </div>
 
 
     <!-- /container -->
     <footer class="footer">
         <div class="container">
-            <p>
-            <p>Version <span id="versionNumber"></span></p>
+            <p>Built and maintained by Richie Rump (<a href="http://www.jorriss.net">blog</a> | <a
+                    href="http://twitter.com/jorriss">twitter</a>) and the fine folks at Jorriss LLC.</p>
+            <p>version <span id="versionNumber"></span></p>
         </div>
     </footer>
 
@@ -230,7 +231,7 @@
 
     </script>
     <script>
-        // Update comparative header based on input value (root index.html)
+        // Update comparative header based on input value
         (function () {
             var input = document.getElementById('cmp-title-input');
             var header = document.getElementById('cmpHeader');
@@ -240,6 +241,7 @@
                 header.innerText = v ? ('Comparativo ' + v) : 'Comparativo';
             }
             input.addEventListener('input', updateHeader);
+            // initialize header in case input has a value
             updateHeader();
         })();
     </script>
